force-app/main/default/objects/ETA_Element__c/ETA_Element__c.object-meta.xml
<CustomObject>
    <label>ETA Element</label>
    <nameField>
        <label>ETA Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ETA Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>