force-app/main/default/objects/ETA_Element__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>18</length>
    <type>Text</type>
</CustomField>