force-app/main/default/objects/ETA_Element__c/fields/Processor_Override__c.field-meta.xml
<CustomField>
    <fullName>Processor_Override__c</fullName>
    <label>Processor Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>