force-app/main/default/objects/ETA_Element__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Namespace__c</columns>
    <columns>Processor_Override__c</columns>
    <columns>Processor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>